--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                     <p>Two player tic tac toe built in WinForms <a href= "https://github.com/nategoodman88/TwoPlayerTicTacToe" target="_blank" style="color: #2EB1F8"><span> Github Code</span></a></p>
                 <li><b>Dragon Fight! - C# Console Application </b></li>
                     <p>A console/text based RPG for C# development practice as well as a prototype for future Unit development. <a href= "https://github.com/nategoodman88/DragonFight" target="_blank" style="color: #2EB1F8"><span> Github Code</span></a></p>
-                <li><b>Fire Emblem Engage Character Class Randomizer - C# Console Application </b></li>
-                    <p>Application that assigns random classes to all Fire Emblem Engage Characters (excluding exclusive classes i.e Divine Dragon) for challenge runs. <a href= "https://github.com/nategoodman88/FireEmblemEngageRandomizer" target="_blank" style="color: #2EB1F8"><span> Github Code</span></a></p>
+                <li><b>Fire Emblem Engage Character Class Randomizer - C# Console Application and WPF GUI Application</b></li>
+                    <p>Application that assigns random classes to all Fire Emblem Engage Characters (excluding exclusive classes i.e Divine Dragon) for challenge runs. <a href= "https://github.com/nategoodman88/FireEmblemEngageRandomizer" target="_blank" style="color: #2EB1F8"><span> Github Code - Console version</span></a> <a href= "https://github.com/nategoodman88/FireEmblemEngageRandomizerUIVersion" target="_blank" style="color: #2EB1F8"><span> Github Code - GUI version</span></a></p>
                 <li><b>AWS Lightsail Valheim server running on Ubuntu </b></li>
 
             </ul>
