--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <tr>
                 <th>Ops</th>
                     <td>Networking</td>
-                    <td>Github, Gitlab, Docker, AWS</td>
+                    <td>Git, Docker, AWS</td>
                     <td>Project Management</td>
             </tr>
         </table>
