--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1 align="center">Nate Goodman</h1>
         <p align="center">Information Technology Professional</p>
         <p align="Center">Phone: 231-724-0990 | Email: nategoodman88@gmail.com</p>
-        <p align="Center"><a href="https://www.dropbox.com/home?preview=Resume.docx"target="_blank" style="color: #2EB1F8"> <span> Resume </span> </a></p>
+        <p align="Center"><a href="https://www.dropbox.com/scl/fi/4zebozw9w884to781s9y3/Resume.docx?rlkey=t5kcfvfxfdr7tzjyjnnjsswwj&dl=0"target="_blank" style="color: #2EB1F8"> <span> Resume </span> </a></p>
 <!--Small headshot in it's own div-->       
         <div>
             <img src = "images/Nate.png" class="headshot">
@@ -74,24 +74,23 @@
         <h6><i>Portfolio/Projects</i></h6>
             <ul>
                 <li><b>Movie Database API - Python Flask project</b>
-                    <p>Note: Due to cost has been taken offline. A flask API interacting with a MySQL database filled with the blu rays I own. Hosted through AWS Elastic Beanstalk. MySQL Datasbase through AWS RDS. <a href="https://github.com/nategoodman88/DatabaseAPI" target="_blank" style="color: #2EB1F8"><span> Github code</span></a></p>
+                    <p>Note: Due to AWS costs has been taken offline. A flask API interacting with a MySQL database filled with the blu rays I own. Hosted through AWS Elastic Beanstalk. MySQL Datasbase through AWS RDS. <a href="https://github.com/nategoodman88/DatabaseAPI" target="_blank" style="color: #2EB1F8"><span> Github code</span></a></p>
                 </li>
                 <li><b>nategoodmandev API - Node JS project</b></li>
-                    <p>Simple API to POST and GET views of my personal website. Hosted through Heroku. MySQL Database through AWS RDS. CI Pipeline and Dockererized through Gitlab. <a href= "https://github.com/nategoodman88/nategoodmandevapi" target="_blank" style="color: #2EB1F8"><span> Github code</span></a></p>
+                    <p>Note: Due to AWS costs has been taken offline. Simple API to POST and GET views of my personal website. Hosted through Heroku. MySQL Database through AWS RDS. CI Pipeline and Dockererized through Gitlab. <a href= "https://github.com/nategoodman88/nategoodmandevapi" target="_blank" style="color: #2EB1F8"><span> Github code</span></a></p>
                 <li><b>Gorbo Studios Website</b></li>
                     <p>Collaboration website with my close friend for our indie game dev studio that will some day make a game. <a href= "https://gorbostudios.com" target="_blank" style="color: #2EB1F8"><span> Website</span></a></p>
                 <li><b>To Do List App - VueJS/Quasar Framework Project </b></li>
                     <p>A To Do List app created with Quasar framework. Partially implemented backend with Directus. <a href= "https://github.com/nategoodman88/ToDoList" target="_blank" style="color: #2EB1F8"><span> Github Code</span></a></p>
                 <li><b>Doe Web Scraper API - Node JS Project. </b></li>
-                    <p>A web scrapper and API built with Node JS to facilitate matching of John and Jane Doe cases with missing persons reports.   CI Pipeline and Dockererized through Gitlab. <a href= "https://github.com/nategoodman88/DoeWebScrapperAPI" target="_blank" style="color: #2EB1F8"><span> Github Code</span></a></p>
+                    <p>A web scrapper and API built with Node JS to facilitate matching of John and Jane Doe cases with missing persons reports. CI Pipeline and Dockererized through Gitlab. <a href= "https://github.com/nategoodman88/DoeWebScrapperAPI" target="_blank" style="color: #2EB1F8"><span> Github Code</span></a></p>
                 <li><b>Two Player Tic Tac Toe - C# WinForms Application </b></li>
                     <p>Two player tic tac toe built in WinForms <a href= "https://github.com/nategoodman88/TwoPlayerTicTacToe" target="_blank" style="color: #2EB1F8"><span> Github Code</span></a></p>
                 <li><b>Dragon Fight! - C# Console Application </b></li>
-                    <p>A console/text based RPG for C# development practice as well as a prototype for future Unit development. <a href= "https://github.com/nategoodman88/DragonFight" target="_blank" style="color: #2EB1F8"><span> Github Code</span></a></p>
+                    <p>A console/text based RPG for C# development practice as well as a prototype for future Unity development. <a href= "https://github.com/nategoodman88/DragonFight" target="_blank" style="color: #2EB1F8"><span> Github Code</span></a></p>
                 <li><b>Fire Emblem Engage Character Class Randomizer - C# Console Application and WPF GUI Application</b></li>
                     <p>Application that assigns random classes to all Fire Emblem Engage Characters (excluding exclusive classes i.e Divine Dragon) for challenge runs. <a href= "https://github.com/nategoodman88/FireEmblemEngageRandomizer" target="_blank" style="color: #2EB1F8"><span> Github Code - Console version</span></a> <a href= "https://github.com/nategoodman88/FireEmblemEngageRandomizerUIVersion" target="_blank" style="color: #2EB1F8"><span> Github Code - GUI version</span></a></p>
                 <li><b>AWS Lightsail Valheim server running on Ubuntu </b></li>
-
             </ul>
     </body>
 </html>
