--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <p>Note: Due to AWS costs has been taken offline. Simple API to POST and GET views of my personal website. Hosted through Heroku. MySQL Database through AWS RDS. CI Pipeline and Dockererized through Gitlab. <a href= "https://github.com/nategoodman88/nategoodmandevapi" target="_blank" style="color: #2EB1F8"><span> Github code</span></a></p>
                 <li><b>Gorbo Studios Website</b></li>
                     <p>Collaboration website with my close friend for our indie game dev studio that will some day make a game. <a href= "https://gorbostudios.com" target="_blank" style="color: #2EB1F8"><span> Website</span></a></p>
-                <li><b>To Do List App - VueJS/Quasar Framework Project </b></li>
+                <li><b>To Do List App - Quasar Framework Project </b></li>
                     <p>A To Do List app created with Quasar framework. Partially implemented backend with Directus. <a href= "https://github.com/nategoodman88/ToDoList" target="_blank" style="color: #2EB1F8"><span> Github Code</span></a></p>
                 <li><b>Doe Web Scraper API - Node JS Project. </b></li>
                     <p>A web scrapper and API built with Node JS to facilitate matching of John and Jane Doe cases with missing persons reports. CI Pipeline and Dockererized through Gitlab. <a href= "https://github.com/nategoodman88/DoeWebScrapperAPI" target="_blank" style="color: #2EB1F8"><span> Github Code</span></a></p>
@@ -90,7 +90,11 @@
                     <p>A console/text based RPG for C# development practice as well as a prototype for future Unity development. <a href= "https://github.com/nategoodman88/DragonFight" target="_blank" style="color: #2EB1F8"><span> Github Code</span></a></p>
                 <li><b>Fire Emblem Engage Character Class Randomizer - C# Console Application and WPF GUI Application</b></li>
                     <p>Application that assigns random classes to all Fire Emblem Engage Characters (excluding exclusive classes i.e Divine Dragon) for challenge runs. <a href= "https://github.com/nategoodman88/FireEmblemEngageRandomizer" target="_blank" style="color: #2EB1F8"><span> Github Code - Console version</span></a> <a href= "https://github.com/nategoodman88/FireEmblemEngageRandomizerUIVersion" target="_blank" style="color: #2EB1F8"><span> Github Code - GUI version</span></a></p>
+                <li><b>Furniture Store Inventory Quasar Framework Project</b></li>
+                    <p>A Quasar and Directus project for interview purposes. Hosted via AWS. Front End S3 Bucket. Backend Ubuntu nginx server. <a href= "https://github.com/nategoodman88/FurnitureStore" target="_blank" style="color: #2EB1F8"><span> Github Code - Console version</span></a> <a href= "https://github.com/nategoodman88/FireEmblemEngageRandomizerUIVersion" target="_blank" style="color: #2EB1F8"><span> Github Code - GUI version</span></a></p>
                 <li><b>AWS Lightsail Valheim server running on Ubuntu </b></li>
             </ul>
+            <button onclick="secret()" class="hiddenButton" role="button"></button>
     </body>
+    
 </html>
