--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <li><b>Fire Emblem Engage Character Class Randomizer - C# Console Application and WPF GUI Application</b></li>
                     <p>Application that assigns random classes to all Fire Emblem Engage Characters (excluding exclusive classes i.e Divine Dragon) for challenge runs. <a href= "https://github.com/nategoodman88/FireEmblemEngageRandomizer" target="_blank" style="color: #2EB1F8"><span> Github Code - Console version</span></a> <a href= "https://github.com/nategoodman88/FireEmblemEngageRandomizerUIVersion" target="_blank" style="color: #2EB1F8"><span> Github Code - GUI version</span></a></p>
                 <li><b>Furniture Store Inventory Quasar Framework Project</b></li>
-                    <p>A Quasar and Directus project for interview purposes. Hosted via AWS. Front End S3 Bucket. Backend Ubuntu nginx server. <a href= "https://github.com/nategoodman88/FurnitureStore" target="_blank" style="color: #2EB1F8"><span> Github Code - Console version</span></a> <a href= "https://github.com/nategoodman88/FireEmblemEngageRandomizerUIVersion" target="_blank" style="color: #2EB1F8"><span> Github Code - GUI version</span></a></p>
+                    <p>A Quasar and Directus project for interview purposes. Hosted via AWS. Front End S3 Bucket. Backend Ubuntu nginx server. <a href= "https://github.com/nategoodman88/FurnitureStore" target="_blank" style="color: #2EB1F8"><span> Github Code </span></a> 
                 <li><b>AWS Lightsail Valheim server running on Ubuntu </b></li>
             </ul>
             <button onclick="secret()" class="hiddenButton" role="button"></button>
