--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
         <p align="Center"><a href="https://www.dropbox.com/scl/fi/4zebozw9w884to781s9y3/Resume.docx?rlkey=t5kcfvfxfdr7tzjyjnnjsswwj&dl=0"target="_blank" style="color: #2EB1F8"> <span> Resume </span> </a></p>
 <!--Small headshot in it's own div-->       
         <div>
-            <img src = "images/Nate.png" class="headshot">
+            <img src = "images/Nate.png" class="headshot" alt="Nate Headshot">
         </div>
 <!--Image links to LinkedIn page and Github page-->
         <ol class= "flex-container">
-            <li class= "flex-item"><a href="https://www.linkedin.com/in/nathan-goodman-a81051142/"> <img src ="images/LinkedIn.png" class ="contact-icon"></a></li>
-            <li class= "flex-item"><a href="https://github.com/nategoodman88"> <img  src ="images/Github.png" class ="contact-icon"></a></li>
+            <li class= "flex-item"><a href="https://www.linkedin.com/in/nathan-goodman-a81051142/"> <img src ="images/LinkedIn.png" class ="contact-icon" alt="LinkedIn"></a></li>
+            <li class= "flex-item"><a href="https://github.com/nategoodman88"> <img  src ="images/Github.png" class ="contact-icon" alt="Github"></a></li>
+            <li class= "flex-item"><a href="Blog/index.html"> <img  src ="images/Blog.png" class ="contact-icon" alt="Blog"></a></li>
         </ol>
         <button onclick="onClick()" class="button" role="button">Dark Mode On/Off</button>
 <!--Line to divide my intro with the main content-->
