--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <h1 align="center">Nate Goodman</h1>
-        <p align="center">Information Technology Professional</p>
+        <p align="center">Software Developer</p>
         <p align="Center">Phone: 231-724-0990 | Email: nategoodman88@gmail.com</p>
         <p align="Center"><a href="https://www.dropbox.com/scl/fi/4zebozw9w884to781s9y3/Resume.docx?rlkey=t5kcfvfxfdr7tzjyjnnjsswwj&dl=0"target="_blank" style="color: #2EB1F8"> <span> Resume </span> </a></p>
 <!--Small headshot in it's own div-->       
@@ -20,15 +20,13 @@
         <ol class= "flex-container">
             <li class= "flex-item"><a href="https://www.linkedin.com/in/nathan-goodman-a81051142/"> <img src ="images/LinkedIn.png" class ="contact-icon" alt="LinkedIn"></a></li>
             <li class= "flex-item"><a href="https://github.com/nategoodman88"> <img  src ="images/Github.png" class ="contact-icon" alt="Github"></a></li>
-            <li class= "flex-item"><a href="Blog/index.html"> <img  src ="images/Blog.png" class ="contact-icon" alt="Blog"></a></li>
         </ol>
         <button onclick="onClick()" class="button" role="button">Dark Mode On/Off</button>
 <!--Line to divide my intro with the main content-->
         <hr>
-        <h2><i>Summary</i></h2>
-        <p>I am an IT Networking Professional looking to change paths to a Software Development/DevOps role</p>
-        <h3><i>Job Experience</i></h3> 
-                <li><b> Network Escalations Support Engineer| May 2022 - Present </b>
+        <h2><i>Job Experience</i></h2> 
+                <li><b> Software Developer - SPARK Business Works| January 2024 - Present </b>
+                <li><b> Network Escalations Support Engineer - Service Corporation International | May 2022 - December 2023</b>
                     <p>Supported the resolution of escalated break/fix tickets of telephone lines and internet circuits in over 2,000 locations throughout the US, Canada and Puerto Rico. Supported SCI’s Cisco Meraki stack and Cisco Call Manager. Team lead on project to integrate AlertOps API into Cisco Meraki alerting. Regional Lead for east coast locations: oversaw 4 other employees on the team and directed them in the best actions to lead the support of all SCI locations in the east coast. Continued to make use of Wrike to track projects including disaster recovery after Hurricane Ian.</p>
                 </li>
                 <li><b>Telecommunications Analyst - Service Corporation International | March 2021 - April 2022</b>
@@ -50,35 +48,20 @@
                     <p>Supported hardware and software of student machines. Participated in direct hardware repair such as full-board replacement.</p>
                 </li>
             </ul>
-        <h4><i>Education/Certifications</i></h4>
+        <h3><i>Education/Certifications</i></h3>
             <ul>
                 <li>Master of Science in Information Technology - Southern New Hampshire University | December 2021</li>
                 <li>Bachelor of Science in Information Technology - Central Michigan University | May 2019</li>
                 <li>Security+</li>
                 <li>CCNA</li>
             </ul>
-        <h5><i>Skills</i></h5>
-        <table border="1">
-            <tr>
-                <th>Dev</th>
-                    <td>Web Development</td>
-                    <td>Python</td>
-                    <td>C#</td>
-            </tr>
-            <tr>
-                <th>Ops</th>
-                    <td>Networking</td>
-                    <td>Git, Docker, AWS</td>
-                    <td>Project Management</td>
-            </tr>
-        </table>
-        <h6><i>Portfolio/Projects</i></h6>
+        <h4><i>Portfolio/Projects</i></h4>
             <ul>
                 <li><b>Movie Database API - Python Flask project</b>
-                    <p>Note: Due to AWS costs has been taken offline. A flask API interacting with a MySQL database filled with the blu rays I own. Hosted through AWS Elastic Beanstalk. MySQL Datasbase through AWS RDS. <a href="https://github.com/nategoodman88/DatabaseAPI" target="_blank" style="color: #2EB1F8"><span> Github code</span></a></p>
+                    <p>A flask API interacting with a MySQL database filled with the blu rays I own. Was hosted through AWS Elastic Beanstalk. MySQL Datasbase through AWS RDS. <a href="https://github.com/nategoodman88/DatabaseAPI" target="_blank" style="color: #2EB1F8"><span> Github code</span></a></p>
                 </li>
                 <li><b>nategoodmandev API - Node JS project</b></li>
-                    <p>Note: Due to AWS costs has been taken offline. Simple API to POST and GET views of my personal website. Hosted through Heroku. MySQL Database through AWS RDS. CI Pipeline and Dockererized through Gitlab. <a href= "https://github.com/nategoodman88/nategoodmandevapi" target="_blank" style="color: #2EB1F8"><span> Github code</span></a></p>
+                    <p>Simple API to POST and GET views of my personal website. Was hosted through Heroku. MySQL Database through AWS RDS. CI Pipeline and Dockererized through Gitlab. <a href= "https://github.com/nategoodman88/nategoodmandevapi" target="_blank" style="color: #2EB1F8"><span> Github code</span></a></p>
                 <li><b>Gorbo Studios Website</b></li>
                     <p>Collaboration website with my close friend for our indie game dev studio that will some day make a game. <a href= "https://gorbostudios.com" target="_blank" style="color: #2EB1F8"><span> Website</span></a></p>
                 <li><b>To Do List App - Quasar Framework Project </b></li>
@@ -92,10 +75,8 @@
                 <li><b>Fire Emblem Engage Character Class Randomizer - C# Console Application and WPF GUI Application</b></li>
                     <p>Application that assigns random classes to all Fire Emblem Engage Characters (excluding exclusive classes i.e Divine Dragon) for challenge runs. <a href= "https://github.com/nategoodman88/FireEmblemEngageRandomizer" target="_blank" style="color: #2EB1F8"><span> Github Code - Console version</span></a> <a href= "https://github.com/nategoodman88/FireEmblemEngageRandomizerUIVersion" target="_blank" style="color: #2EB1F8"><span> Github Code - GUI version</span></a></p>
                 <li><b>Furniture Store Inventory Quasar Framework Project</b></li>
-                    <p>A Quasar and Directus project for interview purposes. Hosted via AWS. Front End S3 Bucket. Backend Ubuntu nginx server. <a href= "https://github.com/nategoodman88/FurnitureStore" target="_blank" style="color: #2EB1F8"><span> Github Code </span></a> 
-                <li><b>AWS Lightsail Valheim server running on Ubuntu </b></li>
+                    <p>A Quasar and Directus project for interview purposes. Was osted via AWS. Front End S3 Bucket. Backend Ubuntu nginx server. <a href= "https://github.com/nategoodman88/FurnitureStore" target="_blank" style="color: #2EB1F8"><span> Github Code </span></a> 
             </ul>
             <button onclick="secret()" class="hiddenButton" role="button"></button>
     </body>
-    
 </html>
