--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <p align="Center"><a href="https://www.dropbox.com/scl/fi/4zebozw9w884to781s9y3/Resume.docx?rlkey=t5kcfvfxfdr7tzjyjnnjsswwj&dl=0"target="_blank" style="color: #2EB1F8"> <span> Resume </span> </a></p>
 <!--Small headshot in it's own div-->       
         <div>
-            <img src = "images/Nate.png" class="headshot" alt="Nate Headshot">
+            <img src = "images/Headshot.jpg" class="headshot" alt="Nate Headshot">
         </div>
 <!--Image links to LinkedIn page and Github page-->
         <ol class= "flex-container">
