temp summary for current position

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <hr>
         <h2><i>Job Experience</i></h2> 
                 <li><b> Software Developer - SPARK Business Works| January 2024 - Present </b>
+                    <p>SPARK provides custom software development and digital marketing services. We partner with our clients to execute practical strategies that increase efficiency and deliver ROI. </p>
                 <li><b> Network Escalations Support Engineer - Service Corporation International | May 2022 - December 2023</b>
                     <p>Supported the resolution of escalated break/fix tickets of telephone lines and internet circuits in over 2,000 locations throughout the US, Canada and Puerto Rico. Supported SCI’s Cisco Meraki stack and Cisco Call Manager. Team lead on project to integrate AlertOps API into Cisco Meraki alerting. Regional Lead for east coast locations: oversaw 4 other employees on the team and directed them in the best actions to lead the support of all SCI locations in the east coast. Continued to make use of Wrike to track projects including disaster recovery after Hurricane Ian.</p>
                 </li>
