--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
         <h1 align="center">Nate Goodman</h1>
         <p align="center">Software Developer</p>
         <p align="Center">Phone: 231-724-0990 | Email: nategoodman88@gmail.com</p>
-        <p align="Center"><a href="https://www.dropbox.com/scl/fi/4zebozw9w884to781s9y3/Resume.docx?rlkey=t5kcfvfxfdr7tzjyjnnjsswwj&dl=0"target="_blank" style="color: #2EB1F8"> <span> Resume </span> </a></p>
 <!--Small headshot in it's own div-->       
         <div>
             <img src = "images/Headshot.jpg" class="headshot" alt="Nate Headshot">
@@ -25,8 +24,9 @@
 <!--Line to divide my intro with the main content-->
         <hr>
         <h2><i>Job Experience</i></h2> 
+            <ul>
                 <li><b> Software Developer - SPARK Business Works| January 2024 - Present </b>
-                    <p>SPARK provides custom software development and digital marketing services. We partner with our clients to execute practical strategies that increase efficiency and deliver ROI. </p>
+                    <p>Developed dynamic web and mobile applications. Helped establish DevOps practices within the company including standardized CI/CD pipelines, project templates, AWS optimization, etc.</p>
                 <li><b> Network Escalations Support Engineer - Service Corporation International | May 2022 - December 2023</b>
                     <p>Supported the resolution of escalated break/fix tickets of telephone lines and internet circuits in over 2,000 locations throughout the US, Canada and Puerto Rico. Supported SCI’s Cisco Meraki stack and Cisco Call Manager. Team lead on project to integrate AlertOps API into Cisco Meraki alerting. Regional Lead for east coast locations: oversaw 4 other employees on the team and directed them in the best actions to lead the support of all SCI locations in the east coast. Continued to make use of Wrike to track projects including disaster recovery after Hurricane Ian.</p>
                 </li>
@@ -49,34 +49,15 @@
                     <p>Supported hardware and software of student machines. Participated in direct hardware repair such as full-board replacement.</p>
                 </li>
             </ul>
-        <h3><i>Education/Certifications</i></h3>
+        <h3><i>Education</i></h3>
             <ul>
                 <li>Master of Science in Information Technology - Southern New Hampshire University | December 2021</li>
                 <li>Bachelor of Science in Information Technology - Central Michigan University | May 2019</li>
-                <li>Security+</li>
-                <li>CCNA</li>
             </ul>
-        <h4><i>Portfolio/Projects</i></h4>
+        <h4><i>Portfolio</i></h4>
             <ul>
-                <li><b>Movie Database API - Python Flask project</b>
-                    <p>A flask API interacting with a MySQL database filled with the blu rays I own. Was hosted through AWS Elastic Beanstalk. MySQL Datasbase through AWS RDS. <a href="https://github.com/nategoodman88/DatabaseAPI" target="_blank" style="color: #2EB1F8"><span> Github code</span></a></p>
-                </li>
-                <li><b>nategoodmandev API - Node JS project</b></li>
-                    <p>Simple API to POST and GET views of my personal website. Was hosted through Heroku. MySQL Database through AWS RDS. CI Pipeline and Dockererized through Gitlab. <a href= "https://github.com/nategoodman88/nategoodmandevapi" target="_blank" style="color: #2EB1F8"><span> Github code</span></a></p>
-                <li><b>Gorbo Studios Website</b></li>
-                    <p>Collaboration website with my close friend for our indie game dev studio that will some day make a game. <a href= "https://gorbostudios.com" target="_blank" style="color: #2EB1F8"><span> Website</span></a></p>
-                <li><b>To Do List App - Quasar Framework Project </b></li>
-                    <p>A To Do List app created with Quasar framework. Partially implemented backend with Directus. <a href= "https://github.com/nategoodman88/ToDoList" target="_blank" style="color: #2EB1F8"><span> Github Code</span></a></p>
-                <li><b>Doe Web Scraper API - Node JS Project. </b></li>
-                    <p>A web scrapper and API built with Node JS to facilitate matching of John and Jane Doe cases with missing persons reports. CI Pipeline and Dockererized through Gitlab. <a href= "https://github.com/nategoodman88/DoeWebScrapperAPI" target="_blank" style="color: #2EB1F8"><span> Github Code</span></a></p>
-                <li><b>Two Player Tic Tac Toe - C# WinForms Application </b></li>
-                    <p>Two player tic tac toe built in WinForms <a href= "https://github.com/nategoodman88/TwoPlayerTicTacToe" target="_blank" style="color: #2EB1F8"><span> Github Code</span></a></p>
-                <li><b>Dragon Fight! - C# Console Application </b></li>
-                    <p>A console/text based RPG for C# development practice as well as a prototype for future Unity development. <a href= "https://github.com/nategoodman88/DragonFight" target="_blank" style="color: #2EB1F8"><span> Github Code</span></a></p>
-                <li><b>Fire Emblem Engage Character Class Randomizer - C# Console Application and WPF GUI Application</b></li>
-                    <p>Application that assigns random classes to all Fire Emblem Engage Characters (excluding exclusive classes i.e Divine Dragon) for challenge runs. <a href= "https://github.com/nategoodman88/FireEmblemEngageRandomizer" target="_blank" style="color: #2EB1F8"><span> Github Code - Console version</span></a> <a href= "https://github.com/nategoodman88/FireEmblemEngageRandomizerUIVersion" target="_blank" style="color: #2EB1F8"><span> Github Code - GUI version</span></a></p>
-                <li><b>Furniture Store Inventory Quasar Framework Project</b></li>
-                    <p>A Quasar and Directus project for interview purposes. Was osted via AWS. Front End S3 Bucket. Backend Ubuntu nginx server. <a href= "https://github.com/nategoodman88/FurnitureStore" target="_blank" style="color: #2EB1F8"><span> Github Code </span></a> 
+                <li>See my non-published projects on my <a href="https://github.com/nategoodman88">Github</a> account</li>
+                <li><a href="https://kandgtoolco.com">K&G Tool</a></li>
             </ul>
             <button onclick="secret()" class="hiddenButton" role="button"></button>
     </body>
