convert to Quasar

--- a/index.html
+++ b/index.html
@@ -1,64 +1,3 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-        <title>Nate Goodman</title> 
-        <link rel="stylesheet" type="text/css" href="Style.css">
-        <link rel="shortcut icon" type="image/ico" href="images/computer.ico">  
-        <script src = "Script.js" defer></script>
-    </head>
-    <body>
-        <h1 align="center">Nate Goodman</h1>
-        <p align="center">Software Developer</p>
-        <p align="Center">Phone: 231-724-0990 | Email: nategoodman88@gmail.com</p>
-<!--Small headshot in it's own div-->       
-        <div>
-            <img src = "images/Headshot.jpg" class="headshot" alt="Nate Headshot">
-        </div>
-<!--Image links to LinkedIn page and Github page-->
-        <ol class= "flex-container">
-            <li class= "flex-item"><a href="https://www.linkedin.com/in/nathan-goodman-a81051142/"> <img src ="images/LinkedIn.png" class ="contact-icon" alt="LinkedIn"></a></li>
-            <li class= "flex-item"><a href="https://github.com/nategoodman88"> <img  src ="images/Github.png" class ="contact-icon" alt="Github"></a></li>
-        </ol>
-        <button onclick="onClick()" class="button" role="button">Dark Mode On/Off</button>
-<!--Line to divide my intro with the main content-->
-        <hr>
-        <h2><i>Job Experience</i></h2> 
-            <ul>
-                <li><b> Software Developer - SPARK Business Works| January 2024 - Present </b>
-                    <p>Developed dynamic web and mobile applications. Helped establish DevOps practices within the company including standardized CI/CD pipelines, project templates, AWS optimization, etc.</p>
-                <li><b> Network Escalations Support Engineer - Service Corporation International | May 2022 - December 2023</b>
-                    <p>Supported the resolution of escalated break/fix tickets of telephone lines and internet circuits in over 2,000 locations throughout the US, Canada and Puerto Rico. Supported SCI’s Cisco Meraki stack and Cisco Call Manager. Team lead on project to integrate AlertOps API into Cisco Meraki alerting. Regional Lead for east coast locations: oversaw 4 other employees on the team and directed them in the best actions to lead the support of all SCI locations in the east coast. Continued to make use of Wrike to track projects including disaster recovery after Hurricane Ian.</p>
-                </li>
-                <li><b>Telecommunications Analyst - Service Corporation International | March 2021 - April 2022</b>
-                    <p>Managed the install, stability, conversion and upgrade of data circuits and phone lines for 2,000+ locations in the United States, Canada and Puerto Rico. Tracked all conversion and upgrades in project managing software Wrike.</p>
-                </li>
-                <li><b>Help Desk Analyst - Service Corporation International Direct | September 2019 - March 2021 </b>
-                    <p>Supported hardware and software for users of 100+ locations. Managed user accounts and access. Participated in low-level networking and telephony troubleshooting before passing up to the next team</p>
-                </li>
-                <li><b>Technical Services Trainer - Central Michigan University | May 2018 - May 2019 </b>
-                    <p>Led and trained all incoming employees of the Technical Services team. Kept track of the learning progress of each team member and scheduled goals for them.</p>
-                </li>
-                <li><b>Technical Services Tech - Central Michigan University | August 2017 - May 2019 </b>
-                    <p>Supported staff and lab machines, deployed Windows OS images via SCCM and MAC OS images via Munki and created and deployed application packages.</p>
-                </li>
-                <li><b>Cyber Security Intern - Central Michigan University | May 2018 - August 2018 </b>
-                    <p>Updated the user training on Phishing. Investigated compromised user accounts and Phishing emails. Pursued and tracked the progress of investigations in a waterfall approach</p>
-                </li>
-                <li><b>Computer Repair Technician - Central Michigan University | May 2018 - August 2018 </b>
-                    <p>Supported hardware and software of student machines. Participated in direct hardware repair such as full-board replacement.</p>
-                </li>
-            </ul>
-        <h3><i>Education</i></h3>
-            <ul>
-                <li>Master of Science in Information Technology - Southern New Hampshire University | December 2021</li>
-                <li>Bachelor of Science in Information Technology - Central Michigan University | May 2019</li>
-            </ul>
-        <h4><i>Portfolio</i></h4>
-            <ul>
-                <li>See my non-published projects on my <a href="https://github.com/nategoodman88">Github</a> account</li>
-                <li><a href="https://kandgtoolco.com">K&G Tool</a></li>
-            </ul>
-            <button onclick="secret()" class="hiddenButton" role="button"></button>
-    </body>
-</html>
+<!DOCTYPE html><html><head><title>Portfolio Website</title><meta charset=utf-8><meta name=description content="Portfolio website"><meta name=format-detection content="telephone=no"><meta name=msapplication-tap-highlight content=no><meta name=viewport content="user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1,width=device-width"><link rel=icon type=image/png sizes=128x128 href=/icons/favicon-128x128.png><link rel=icon type=image/png sizes=96x96 href=/icons/favicon-96x96.png><link rel=icon type=image/png sizes=32x32 href=/icons/favicon-32x32.png><link rel=icon type=image/png sizes=16x16 href=/icons/favicon-16x16.png><link rel=icon type=image/ico href=/favicon.ico>  <script type="module" crossorigin src="/assets/index.588e5a6f.js"></script>
+  <link rel="stylesheet" href="/assets/index.cbcbbb99.css">
+</head><body><div id=q-app></div></body></html>
